--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.37.2",
     "axios": "^1.3.4",
     "eslint": "^8.34.0",
+    "framer-motion": "^10.6.1",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
