--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@iconscout/react-unicons": "^2.0.0",
     "@mantine/core": "^6.0.2",
     "@mantine/hooks": "^6.0.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,6 +20,7 @@
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
